[project]
name = "tojioo-passthrough"
version = "1.4.0"
description = "Typed passthrough nodes for ComfyUI to reduce wire clutter. Nodes include typed Any-Switches, Any-Batch-Switches, and a Multi-Passthrough hub."
license = {file = "LICENSE"}
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
test = [
	"pytest>=7.0.0",
	"pytest-cov>=4.0.0",
]

[project.urls]
Repository = "https://github.com/Tojioo/tojioo_passthrough"
Documentation = "https://github.com/Tojioo/tojioo_passthrough/wiki"
"Bug Tracker" = "https://github.com/Tojioo/tojioo_passthrough/issues"

[tool.comfy]
PublisherId = "tojioo"
DisplayName = "Tojioo Passthrough"
Icon = "https://avatars.githubusercontent.com/u/132622614?s=256"
includes = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nodes", "logger.py"]
omit = ["tests/*", ".venv/*"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodes*"]
exclude = ["tests*", "js*", "example_workflow*"]