[project]
name = "tojioo-passthrough"
dynamic = ["version"]
description = "Tojioo Passthrough - Python package"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
	"pytest>=7.0.0",
	"pytest-cov>=4.0.0",
	"torch",
	"numpy",
	"Pillow",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tojioo_passthrough"]
omit = ["tests/*"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "../VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["tojioo_passthrough", "tojioo_passthrough.*"]
exclude = ["tests*"]